--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -154,3 +154,35 @@ body{
 .hidden{
     display: none;
 }
+
+.abnormal{
+    color: yellow;
+}
+
+.normal {
+     color: green;
+}
+
+.attention{
+    color:#dc2626;
+}
+
+@media screen and (max-width: 1024px){
+    #img{
+        display: none;
+    }
+}
+
+@media screen and (max-width: 500px){
+    #container{
+        width: 100%;
+        height: 100%;
+    }
+
+    #calculator{
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+        justify-content: center;
+    }
+}
